--- a/assets/styles.css
+++ b/assets/styles.css
@@ -2,7 +2,26 @@
     margin: 5px
 }
 
+#chat-submit-plot {
+    margin: 5px
+}
+
 #chat-output {
+    overflow-y: scroll;
+    height: 400px;
+}
+
+#chat-output-plot {
+    overflow-y: scroll;
+    height: 400px;
+}
+
+#generate-image-button {
+    overflow-y: scroll;
+    height: 400px;
+}
+
+#generate-image-output {
     overflow-y: scroll;
     height: 400px;
 }
@@ -13,6 +32,19 @@
 }
 
 #chat-container {
+    width: 50vw;
+    border-width: 20px;
+    padding: 20px;
+    border-left: 1px solid rgb(206, 212, 218); /* Adjust the width and color as needed */
+}
+#chat-container-plot {
+    width: 50vw;
+    border-width: 20px;
+    padding: 20px;
+    border-left: 1px solid rgb(206, 212, 218); /* Adjust the width and color as needed */
+}
+
+#chat-container-image {
     width: 50vw;
     border-width: 20px;
     padding: 20px;
@@ -40,12 +72,51 @@
     justify-content: space-between;
 }
 
+.chat-plot-item {
+    border: 1px solid rgb(206, 212, 218);
+    border-radius: 4px;
+    padding: 10px;
+    margin: 10px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.chat-item-generate-image {
+    border: 1px solid rgb(206, 212, 218);
+    border-radius: 4px;
+    padding: 10px;
+    margin: 10px;
+    display: flex;
+    justify-content: space-between;
+}
+
 .question {
     color: black;
     margin-right: 20px; /* Add 5px margin to the right of the question */
 }
 
 .answer {
+    color: grey;
+    margin-left: 20px; /* Add 5px margin to the left of the answer */
+}
+
+
+.question-plot {
+    color: black;
+    margin-right: 20px; /* Add 5px margin to the right of the question */
+}
+
+.answer-plot {
+    color: grey;
+    margin-left: 20px; /* Add 5px margin to the left of the answer */
+}
+
+.generate-image-textarea {
+    color: black;
+    margin-right: 20px; /* Add 5px margin to the right of the question */
+}
+
+.answer-image {
     color: grey;
     margin-left: 20px; /* Add 5px margin to the left of the answer */
 }
